--- a/chemistry-sub.html
+++ b/chemistry-sub.html
@@ -78,7 +78,7 @@ td, th {
 #top
 {
 	height:161px;
-	background-color:#ededed;
+	background-color:#deded;
 	
 }
 
@@ -88,7 +88,8 @@ td, th {
 
 <div>
 <div id="top">
-<div align="center"><img src="images/12345.png">
+<div id="top"><div align="center"><img src="../../images/2.png">
+<img src="../../images/12345.png"><img src="../../images/1.png">
 
 </div>
 <hr>
