--- a/ece-sub.html
+++ b/ece-sub.html
@@ -78,7 +78,7 @@ td, th {
 #top
 {
 	height:161px;
-	background-color:#deded;
+	background-color:#ededed;
 	
 }
 
@@ -88,12 +88,12 @@ td, th {
 
 <div>
 <div id="top">
-<div align="center"><img src="images/2.png">
-<img src="images/12345.png"><img src="images/1.png">
+<div align="center"><img src="../../images/2.png">
+<img src="../../images/12345.png"><img src="../../images/1.png">
 
 </div>
 <hr>
-<div align="center"><p style="font-size:22px;color:#2c3e50; font-family:lucida handwriting;  font-weight:bold; text-decoration:underlined;">Click on Course for Video Lectures</p></div>
+<div align="center"><p style="font-size:22px;color:#2c3e50; font-family:lucida handwriting; font-weight:bold; text-decoration:underlined;">Click on Course for Video Lectures</p></div>
 
 <table width="100%">
 
@@ -101,17 +101,17 @@ td, th {
 
     
 <tr>
-    <td><div align="left"><a href="eee/bee/bee-links.html" id="linked">1. BEE </a></td>
+    <td><div align="left"><a href="maths/mac/mac-links.html" id="linked">1. A8001 - Matrices and Calculus </a></td>
 	</tr><tr>
-	<td> <div align="left"><a href="maths/odevc/odevc-links.html" id="linked">2. </a></td>
+	<td> <div align="left"><a href="maths/odevc/odevc-links.html" id="linked">2. A8002 - Ordinary Differential Equations and Vector Calculus</a></td>
 	</tr><tr>
-	<td><div align="left"><a href="maths/pds/pds-links.html" id="linked">3. </a></td>
+	<td><div align="left"><a href="maths/pds/pds-links.html" id="linked">3. A8003 - Probability Distributions and Statistics</a></td>
 	</tr><tr>
-	<td><div align="left"><a href="maths/nmcv/nmcv-links.html" id="linked">4.  </a></td>
+	<td><div align="left"><a href="maths/nmcv/nmcv-links.html" id="linked">4. A8004 - Numerical Methods and Complex Variables </a></td>
 	</tr>
 
 
-    <td><div align="left"><a href="maths/cosm/cosm-links.html" id="linked">5. </a></td>
+    <td><div align="left"><a href="maths/cosm/cosm-links.html" id="linked">5. A8005 - Computer Oriented Statistical Methods</a></td>
 
     	
 
