--- a/english-sub.html
+++ b/english-sub.html
@@ -93,7 +93,7 @@ td, th {
 
 </div>
 <hr>
-<div align="center"><p style="font-size:22px;color:#2c3e50; font-family:lucida handwriting;  font-weight:bold; text-decoration:underlined;">Click on Course for Video Lectures</p></div>
+<div align="center"><p style="font-size:22px;color:#2c3e50; font-family:lucida handwriting; text-decoration:underlined;">Click on Course for Video Lectures</p></div>
 
 <table width="100%">
 
@@ -101,17 +101,17 @@ td, th {
 
     
 <tr>
-    <td><div align="left"><a href="eee/bee/bee-links.html" id="linked">1. BEE </a></td>
+    <td><div align="left"><a href="english/eng/cs-links.html" id="linked">1.Communication Skills </a></td>
 	</tr><tr>
-	<td> <div align="left"><a href="maths/odevc/odevc-links.html" id="linked">2. </a></td>
+	<td> <div align="left"><a href="english/odevc/odevc-links.html" id="linked">2. </a></td>
 	</tr><tr>
-	<td><div align="left"><a href="maths/pds/pds-links.html" id="linked">3. </a></td>
+	<td><div align="left"><a href="english/pds/pds-links.html" id="linked">3. </a></td>
 	</tr><tr>
-	<td><div align="left"><a href="maths/nmcv/nmcv-links.html" id="linked">4.  </a></td>
+	<td><div align="left"><a href="english/nmcv/nmcv-links.html" id="linked">4.  </a></td>
 	</tr>
 
 
-    <td><div align="left"><a href="maths/cosm/cosm-links.html" id="linked">5. </a></td>
+    <td><div align="left"><a href="english/cosm/cosm-links.html" id="linked">5.</a></td>
 
     	
 
