--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ color:white;
 #top
 {
 	height:161px;
-	background-color:#ededed;
+	background-color:#deded;
 	<tr> </tr>
 	
 }
@@ -98,11 +98,12 @@ color:white;
 
 <div>
 <div id="top">
-<div align="center"><img src="images/12345.png">
+<div align="center"><img src="images/2.png">
+<img src="images/12345.png"><img src="images/1.png">
 
 </div>
 <hr>
-<div align="center"><p style="font-size:22px;color:#0000ff; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Department for Video Lectures</p></div>
+<div align="center"><p style="font-size:22px;color:#2c3e50; font-family:lucida handwriting; font-weight:bold; text-decoration:underlined;">Click on Department for Video Lectures<p></div>
 
 <table width="100%">
 
@@ -150,7 +151,7 @@ color:white;
 
    
 
-    <td><div align="center"><a href="eng.html" id="linked" >ENGLISH</a></td>
+    <td><div align="center"><a href="english-sub.html" id="linked" >ENGLISH</a></td>
 
     <td><div align="center"><a href="maths-sub.html"id="linked">MATHEMATICS</a></td>
 
@@ -160,7 +161,7 @@ color:white;
 	 <tr>
 	 <table width="1000" align="center" style="border:none;margin-bottom:5px">
 			
-				<td colspan="2"><center><img src="images/building.gif" width="1588"></center></td>
+				<td colspan="2"><center><img src="images/building.jpg" width="1588"></center></td>
 			</tr>
 			
 			<tr>
@@ -174,7 +175,7 @@ color:white;
 				</td>
 			</tr>
 		</table>		
-		<div class="foot"><div align="center">Copyright &copy; 2024, Design &amp; Developed by <strong>Vardhaman College of Engineering</strong></div>
+		<div class="foot"><div align="center">Copyright &copy; 2024, Design &amp; Developed by <strong>Phaneendhar Challa (computer Centre)</strong></div>
 
   
 
