--- a/physics-sub.html
+++ b/physics-sub.html
@@ -114,8 +114,8 @@ border: 2px solid #ffffff;
 
 <div>
 <div id="top">
-<div id="top"><div align="center"><img src="../../images/2.png">
-<img src="../../images/12345.png"><img src="../../images/1.png">
+<div id="top"><div align="center"><img src="images/2.png">
+<img src="images/12345.png"><img src="images/1.png">
 
 
 <table width="100%">
