--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -96,7 +96,7 @@ color: #ffffff;
 #top
 {
 	height:161px;
-	background-color:#ededed;
+	background-color:#deded;
 	
 }
 
@@ -114,7 +114,8 @@ border: 2px solid #ffffff;
 
 <div>
 <div id="top">
-<center><img src="../../images/12345.png"></center>
+<div align="center"><img src="../../images/2.png">
+<img src="../../images/12345.png"><img src="../../images/1.png">
 
 
 <table width="100%">
